# autolocalhost

./: Cargo.toml  nginx.template.conf
.github/workflows/: release.yml
assets/: dhparams.crt
src/: main.rs
src/docker/: container_info.rs  mod.rs  mod.rs_bak
src/hosts/: hosts_file_manager.rs  mod.rs
src/installer/: mod.rs  unix.rs  windows.rs
src/nginx/: config_generator.rs  container_manager.rs  mod.rs
src/ssl/: certificate_generator.rs  dhparam_generator.rs  mod.rs
src/utils/: mod.rs  port_mapping.rs
